[package]
name = "ripsteg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
crc32fast = "1.3.2"
miniz_oxide = "0.7.1"
thiserror = "1.0.56"
